--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alkic_Consulting</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white" href="#">ALKIC Consulting</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item px-3">
+                <a
+                  class="nav-link active fs-5 text-white"
+                  aria-current="page"
+                  href="https://www.alkicconsulting.com/"
+                  >Live Online PMP Classes</a
+                >
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link active text-white fs-5" href="#"
+                  >Scrum Master Classes</a
+                >
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link active text-white fs-5" href="#">About Us</a>
+              </li>
+              <li class="nav-item dropdown px-3">
+                <a
+                  class="nav-link active text-white fs-5 dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item text-white" href="#">Courses</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-white" href="#">Contact</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-white" href="#"
+                      >Video Tutorials</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-white" href="#">Groups</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <!-- <button class="nav-item btn btn-outline-danger nav-contact">
+              Contact
+            </button> -->
+          </div>
+        </div>
+      </nav>
+    </header>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
