--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg shadow p-3">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="#">ALKIC Consulting</a>
+          <a class="navbar-brand text-muted fs-3" href="#">ALKIC Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -26,7 +26,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon bg"></span>
           </button>
           <div
             class="collapse navbar-collapse justify-content-center"
@@ -35,23 +35,23 @@
             <ul class="navbar-nav">
               <li class="nav-item px-3">
                 <a
-                  class="nav-link active fs-5 text-white"
+                  class="nav-link active fs-5 text-muted"
                   aria-current="page"
                   href="https://www.alkicconsulting.com/"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link active text-white fs-5" href="#"
+                <a class="nav-link active text-muted fs-5" href="#"
                   >Scrum Master Classes</a
                 >
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link active text-white fs-5" href="#">About Us</a>
+                <a class="nav-link active text-muted fs-5" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown px-3">
                 <a
-                  class="nav-link active text-white fs-5 dropdown-toggle"
+                  class="nav-link active text-muted fs-5 dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -62,29 +62,34 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item text-white" href="#">Courses</a>
+                    <a class="dropdown-item text-muted" href="#">Courses</a>
                   </li>
                   <li>
-                    <a class="dropdown-item text-white" href="#">Contact</a>
+                    <a class="dropdown-item text-muted" href="#">Contact</a>
                   </li>
                   <li>
-                    <a class="dropdown-item text-white" href="#"
+                    <a class="dropdown-item text-muted" href="#"
                       >Video Tutorials</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item text-white" href="#">Groups</a>
+                    <a class="dropdown-item text-muted" href="#">Groups</a>
                   </li>
                 </ul>
               </li>
             </ul>
-            <!-- <button class="nav-item btn btn-outline-danger nav-contact">
-              Contact
-            </button> -->
           </div>
         </div>
       </nav>
     </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">col 1</div>
+          <div class="col">col 2</div>
+        </div>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
