--- a/src/index.html
+++ b/src/index.html
@@ -14,44 +14,39 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg shadow p-3">
+      <nav class="navbar navbar-expand-lg navbar-light shadow p-3">
         <div class="container-fluid">
-          <a class="navbar-brand text-muted fs-3" href="#">ALKIC Consulting</a>
+          <a class="navbar-brand" href="#">Alkic Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon bg"></span>
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse justify-content-center"
-            id="navbarNav"
+            class="collapse navbar-collapse text-center justify-content-center"
+            id="navbarSupportedContent"
           >
             <ul class="navbar-nav">
-              <li class="nav-item px-3">
-                <a
-                  class="nav-link active fs-5 text-muted"
-                  aria-current="page"
-                  href="https://www.alkicconsulting.com/"
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
                   >Live Online PMP Classes</a
                 >
               </li>
-              <li class="nav-item px-3">
-                <a class="nav-link active text-muted fs-5" href="#"
-                  >Scrum Master Classes</a
-                >
+              <li class="nav-item">
+                <a class="nav-link" href="#">Scrum Master Classes</a>
               </li>
-              <li class="nav-item px-3">
-                <a class="nav-link active text-muted fs-5" href="#">About Us</a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
               </li>
-              <li class="nav-item dropdown px-3">
+              <li class="nav-item dropdown">
                 <a
-                  class="nav-link active text-muted fs-5 dropdown-toggle"
+                  class="nav-link dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -61,35 +56,38 @@
                   More
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Courses</a></li>
+                  <li><a class="dropdown-item" href="#">Groups</a></li>
+                  <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item text-muted" href="#">Courses</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item text-muted" href="#">Contact</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item text-muted" href="#"
-                      >Video Tutorials</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item text-muted" href="#">Groups</a>
+                    <a class="dropdown-item" href="#">Video Tutorials</a>
                   </li>
                 </ul>
               </li>
             </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-primary" type="submit">
+                Contact
+              </button>
+            </form>
           </div>
         </div>
       </nav>
     </header>
-    <main>
+    <!-- <main>
       <div class="container">
         <div class="row">
           <div class="col text-center">col 1</div>
           <div class="col">col 2</div>
         </div>
       </div>
-    </main>
+    </main> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
