--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow p-3">
+      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 bg-*">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Alkic Consulting</a>
+          <a class="navbar-brand fs-3" href="#">Alkic Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -29,10 +29,10 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse text-center justify-content-center"
+            class="collapse navbar-collapse text-center"
             id="navbarSupportedContent"
           >
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
                   >Live Online PMP Classes</a
@@ -80,14 +80,7 @@
         </div>
       </nav>
     </header>
-    <!-- <main>
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">col 1</div>
-          <div class="col">col 2</div>
-        </div>
-      </div>
-    </main> -->
+    <main></main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
