--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 bg-*">
+      <nav class="navbar navbar-expand-lg navbar-light shadow-lg p-2">
         <div class="container-fluid">
-          <a class="navbar-brand fs-3" href="#">Alkic Consulting</a>
+          <a class="navbar-brand fs-2 text-white" href="#">Alkic Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,19 +34,19 @@
           >
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link active text-white" aria-current="page" href="#"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Scrum Master Classes</a>
+                <a class="nav-link active text-white" href="#">Scrum Master Classes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link active text-white" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle active text-white"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -80,7 +80,28 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center main-text">
+            <p class="display-5">
+              Embark on a transformative learning journey with ALKIC Consulting
+              and become a sought-after expert in project management.
+            </p>
+            <p class="text-center fs-4 pt-4">Whether you're seeking professional growth, career advancement, or organizational success,
+               we are here to guide you every step of the way. Join our community of successful project managers and unlock your potential today!
+            </p>
+          </div>
+          <!-- <div class="col bg-danger">
+            <img
+              class="wecan-img"
+              src="./imgs/brett-jordan-Y1uG1DXudUc-unsplash.jpg"
+              alt=""
+            /> -->
+          </div>
+        </div>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
