--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow-lg p-2">
+      <nav class="navbar navbar-expand-lg navbar-dark shadow-lg p-2">
         <div class="container-fluid">
           <a class="navbar-brand fs-2 text-white" href="#">Alkic Consulting</a>
           <button
@@ -34,12 +34,17 @@
           >
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#"
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="#"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" href="#">Scrum Master Classes</a>
+                <a class="nav-link active text-white" href="#"
+                  >Scrum Master Classes</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link active text-white" href="#">About Us</a>
@@ -55,12 +60,19 @@
                 >
                   More
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Courses</a></li>
-                  <li><a class="dropdown-item" href="#">Groups</a></li>
+                <ul
+                  class="dropdown-menu bg-light"
+                  aria-labelledby="navbarDropdown"
+                >
+                  <li>
+                    <a class="dropdown-item bg-light" href="#">Courses</a>
+                  </li>
+                  <li><a class="dropdown-item bg-light" href="#">Groups</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">Video Tutorials</a>
+                    <a class="dropdown-item bg-light" href="#"
+                      >Video Tutorials</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -88,20 +100,21 @@
               Embark on a transformative learning journey with ALKIC Consulting
               and become a sought-after expert in project management.
             </p>
-            <p class="text-center fs-4 pt-4">Whether you're seeking professional growth, career advancement, or organizational success,
-               we are here to guide you every step of the way. Join our community of successful project managers and unlock your potential today!
+            <p class="text-center fs-4 py-4">
+              Whether you're seeking professional growth, career advancement, or
+              organizational success, we are here to guide you every step of the
+              way. Join our community of successful project managers and unlock
+              your potential today!
             </p>
-          </div>
-          <!-- <div class="col bg-danger">
-            <img
-              class="wecan-img"
-              src="./imgs/brett-jordan-Y1uG1DXudUc-unsplash.jpg"
-              alt=""
-            /> -->
           </div>
         </div>
       </div>
     </main>
+    <section>
+      <div class="container-fluid items-2 bg-white">
+        xrdctfvygbuhesxrdctfvygh
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
