--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark shadow-lg p-2">
+      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2 text-white" href="#">Alkic Consulting</a>
+          <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,24 +34,19 @@
           >
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a
-                  class="nav-link active text-white"
-                  aria-current="page"
-                  href="#"
+                <a class="nav-link active" aria-current="page" href="#"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" href="#"
-                  >Scrum Master Classes</a
-                >
+                <a class="nav-link active" href="#">Scrum Master Classes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" href="#">About Us</a>
+                <a class="nav-link active" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle active text-white"
+                  class="nav-link dropdown-toggle active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -60,19 +55,14 @@
                 >
                   More
                 </a>
-                <ul
-                  class="dropdown-menu bg-light"
-                  aria-labelledby="navbarDropdown"
-                >
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item bg-light" href="#">Courses</a>
+                    <a class="dropdown-item" href="#">Courses</a>
                   </li>
-                  <li><a class="dropdown-item bg-light" href="#">Groups</a></li>
+                  <li><a class="dropdown-item" href="#">Groups</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item bg-light" href="#"
-                      >Video Tutorials</a
-                    >
+                    <a class="dropdown-item" href="#">Video Tutorials</a>
                   </li>
                 </ul>
               </li>
@@ -112,7 +102,8 @@
     </main>
     <section>
       <div class="container-fluid items-2 bg-white">
-        xrdctfvygbuhesxrdctfvygh
+        <!-- <img src="./imgs/uuundulate.svg" alt="" /> -->
+        <img src="./imgs/wave.svg" alt="" />
       </div>
     </section>
     <script
