--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 fixed-top">
+      <nav class="navbar navbar-expand-lg shadow p-2 fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
           <button
