--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg shadow p-2 fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 p">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
           <button
@@ -57,12 +57,16 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="#">Courses</a>
+                    <a class="dropdown-item bg-light" href="#">Courses</a>
                   </li>
-                  <li><a class="dropdown-item" href="#">Groups</a></li>
+                  <li>
+                    <a class="dropdown-item bg-light" href="#">Groups</a>
+                  </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">Video Tutorials</a>
+                    <a class="dropdown-item bg-light" href="#"
+                      >Video Tutorials</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -75,14 +79,19 @@
                 aria-label="Search"
               />
               <button class="btn btn-outline-primary" type="submit">
-                Contact
+                <span class="btn-text-one fs-6 text-white">Contact</span
+                ><span class="btn-text-two fs-6 text-white">Welcome</span>
               </button>
+              <!-- <button class="btn">
+                <span class="btn-text-one">Hover me</span>
+                <span class="btn-text-two">Great!</span>
+              </button> -->
             </form>
           </div>
         </div>
       </nav>
     </header>
-    <main>
+    <!-- <main>
       <div class="container">
         <div class="row">
           <div class="col text-center main-text">
@@ -99,13 +108,38 @@
           </div>
         </div>
       </div>
-    </main>
-    <section>
-      <div class="container-fluid items-2 bg-white">
-        <!-- <img src="./imgs/uuundulate.svg" alt="" /> -->
-        <img src="./imgs/wave.svg" alt="" />
+    </main> -->
+    <!-- <div class="container bg-success">
+      <div class="main-texts text-center bg-danger">
+        <h1 class="display2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ab?
+        </h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
+          laudantium. Amet nobis et omnis eaque sint odio atque quae, porro
+          animi, aliquam maxime consequuntur cupiditate.
+        </p>
       </div>
-    </section>
+      <div class="container bg-warning">
+        <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
+      </div>
+    </div> -->
+    <div class="container">
+      <div class="row">
+        <div class="col bg-danger">
+          <h1 class="display2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ab?
+          </h1>
+          <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
+            laudantium. Amet nobis et omnis eaque sint odio atque quae, porro
+            animi, aliquam maxime consequuntur cupiditate.
+          </p>
+        </div>
+        <div class="col bg-warning">
+          <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
+        </div>
+      </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
