--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow p-2 p">
+      <nav class="navbar navbar-expand-lg navbar-light shadow p-2">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
           <button
@@ -83,63 +83,35 @@
                 ><span class="btn-text-two fs-6 text-white">Welcome</span>
               </button>
               <!-- <button class="btn">
-                <span class="btn-text-one">Hover me</span>
-                <span class="btn-text-two">Great!</span>
-              </button> -->
+                  <span class="btn-text-one">Hover me</span>
+                  <span class="btn-text-two">Great!</span>
+                </button> -->
             </form>
           </div>
         </div>
       </nav>
     </header>
-    <!-- <main>
-      <div class="container">
-        <div class="row">
-          <div class="col text-center main-text">
-            <p class="display-5">
-              Embark on a transformative learning journey with ALKIC Consulting
-              and become a sought-after expert in project management.
-            </p>
-            <p class="text-center fs-4 py-4">
-              Whether you're seeking professional growth, career advancement, or
-              organizational success, we are here to guide you every step of the
-              way. Join our community of successful project managers and unlock
-              your potential today!
-            </p>
-          </div>
-        </div>
-      </div>
-    </main> -->
-    <!-- <div class="container bg-success">
-      <div class="main-texts text-center bg-danger">
-        <h1 class="display2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ab?
-        </h1>
-        <p class="lead">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
-          laudantium. Amet nobis et omnis eaque sint odio atque quae, porro
-          animi, aliquam maxime consequuntur cupiditate.
-        </p>
-      </div>
-      <div class="container bg-warning">
-        <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
-      </div>
-    </div> -->
-    <div class="container">
-      <div class="row">
-        <div class="col bg-danger">
-          <h1 class="display2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ab?
-          </h1>
+    <div class="container-fluid cont">
+      <div class="row bg-danger">
+        <div class="col-sm-6 mt-5 bg-success">
+          <h2 class="pt-5">
+            Embark on a transformative learning journey with
+            <span class="font-weight-bold text-uppercase"
+              >ALKIC Consulting</span
+            >
+            and become a sought-after expert in project management.
+          </h2>
           <p class="lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
-            laudantium. Amet nobis et omnis eaque sint odio atque quae, porro
-            animi, aliquam maxime consequuntur cupiditate.
+            Whether you're seeking professional growth, career advancement, or
+            organizational success, we are here to guide you every step of the
+            way
           </p>
         </div>
-        <div class="col bg-warning">
+        <div class="col-sm-6 mt-5 bg-warning">
           <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
         </div>
       </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
