--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,10 @@
                 >
                   More
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul
+                  class="dropdown-menu text-center"
+                  aria-labelledby="navbarDropdown"
+                >
                   <li>
                     <a class="dropdown-item bg-light" href="#">Courses</a>
                   </li>
@@ -92,8 +95,8 @@
       </nav>
     </header>
     <div class="container-fluid cont">
-      <div class="row bg-danger">
-        <div class="col-sm-6 mt-5 bg-success">
+      <div class="row">
+        <div class="col-sm-6 mt-5">
           <h2 class="pt-5">
             Embark on a transformative learning journey with
             <span class="font-weight-bold text-uppercase"
@@ -107,7 +110,7 @@
             way
           </p>
         </div>
-        <div class="col-sm-6 mt-5 bg-warning">
+        <div class="col-sm-6 mt-5 pt-3">
           <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
         </div>
       </div>
