--- a/src/index.html
+++ b/src/index.html
@@ -94,27 +94,38 @@
         </div>
       </nav>
     </header>
-    <div class="container-fluid cont">
-      <div class="row">
-        <div class="col-sm-6 mt-5">
-          <h2 class="pt-5">
-            Embark on a transformative learning journey with
-            <span class="font-weight-bold text-uppercase"
-              >ALKIC Consulting</span
-            >
-            and become a sought-after expert in project management.
-          </h2>
-          <p class="lead">
-            Whether you're seeking professional growth, career advancement, or
-            organizational success, we are here to guide you every step of the
-            way
-          </p>
-        </div>
-        <div class="col-sm-6 mt-5 pt-3">
-          <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
+    <main>
+      <div class="container-fluid cont">
+        <div class="row text-white">
+          <div class="col pt-5">
+            <h2 class="pt-5 display-3">
+              Embark on a transformative learning journey with <br />
+              <span class="font-weight-bold text-uppercase"
+                >ALKIC Consulting</span
+              >
+              <br />
+              and become a sought-after expert in project management.
+            </h2>
+            <p class="lead">
+              Whether you're seeking professional growth, career advancement, or
+              organizational success, we are here to guide you every step of the
+              way.
+            </p>
+          </div>
+          <!-- <div class="col-sm-6 mt-5 pt-3">
+            <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
+          </div> -->
         </div>
       </div>
-    </div>
+      <section class="container-fluid home-section-1">
+        <div class="row">
+          <dic class="col-sm-6 text-center text-white"
+            >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa,
+            voluptates.</dic
+          >
+        </div>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
