--- a/src/index.html
+++ b/src/index.html
@@ -34,19 +34,21 @@
           >
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link active link-a" aria-current="page" href="#"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Scrum Master Classes</a>
+                <a class="nav-link active link-a" href="#"
+                  >Scrum Master Classes</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">About Us</a>
+                <a class="nav-link active link-a" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle active"
+                  class="nav-link dropdown-toggle active link-a"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -60,16 +62,14 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <li>
-                    <a class="dropdown-item bg-light" href="#">Courses</a>
+                    <a class="dropdown-item" href="#">Courses</a>
                   </li>
                   <li>
-                    <a class="dropdown-item bg-light" href="#">Groups</a>
+                    <a class="dropdown-item" href="#">Groups</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item bg-light" href="#"
-                      >Video Tutorials</a
-                    >
+                    <a class="dropdown-item" href="#">Video Tutorials</a>
                   </li>
                 </ul>
               </li>
@@ -112,18 +112,42 @@
               way.
             </p>
           </div>
-          <!-- <div class="col-sm-6 mt-5 pt-3">
-            <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
-          </div> -->
         </div>
       </div>
-      <section class="container-fluid home-section-1">
+      <section class="container-fluid home-section-1 bg-light">
         <div class="row">
-          <dic class="col-sm-6 text-center text-white"
-            >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa,
-            voluptates.</dic
-          >
+          <div class="col-sm-6 my-5 text-center">
+            <h4 class="display-5">We help our clients to...</h4>
+            <ul class="list-group">
+              <li class="list-group">
+                <a class="nav-link text-dark fs-4" href=""
+                  >Improve Organizational Communication</a
+                >
+              </li>
+              <li class="list-group">
+                <a class="nav-link text-dark fs-4" href="">
+                  Boost Teamwork and Collaboration</a
+                >
+              </li>
+              <li class="list-group">
+                <a class="nav-link text-dark fs-4" href="">
+                  Enhance Project Teams' Capabilities</a
+                >
+              </li>
+              <li class="list-group">
+                <a class="nav-link text-dark fs-4" href="">
+                  Recover Troubled Projects</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-6 py-3">
+            <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
+          </div>
         </div>
+      </section>
+      <section>
+        <div class="container-fluid"></div>
       </section>
     </main>
     <script
