--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-      <section class="container-fluid home-section-1 bg-light">
+      <section class="container-fluid home-section-1">
         <div class="row">
           <div class="col-sm-6 my-5 text-center">
             <h4 class="display-5">We help our clients to...</h4>
@@ -131,7 +131,7 @@
               </li>
               <li class="list-group">
                 <a class="nav-link text-dark fs-4" href="">
-                  Enhance Project Teams' Capabilities</a
+                  Enhance Project Team's Capabilities</a
                 >
               </li>
               <li class="list-group">
@@ -146,8 +146,84 @@
           </div>
         </div>
       </section>
+      <!-- card section -->
       <section>
-        <div class="container-fluid"></div>
+        <div class="container-fluid">
+          <div class="row">
+            <!-- card col 1 -->
+            <div class="col bg-primary py-5">
+              <div class="card shadow" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="./imgs/card-img-3.webp"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title fs-3">
+                    Recruitment of Project Managers
+                  </h5>
+                  <p class="card-text text-center">
+                    The profile of a project manager differs significantly from
+                    that of a line manager. And unless you engage the right
+                    resources, your project stands little chance of success. We
+                    know how to match people and their skills with your project
+                    requirements.
+                  </p>
+                  <div class="text-center pt-3">
+                    <a href="#" class="btn btn-primary">Read More...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- div col 2 -->
+            <div class="col mt-3 py-4 bg-danger">
+              <div class="card shadow" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="./imgs/card-img-1.webp"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title fs-3">
+                    Online PMP Certification Training
+                  </h5>
+                  <li class="card-text">Attend from home</li>
+                  <li class="card-text">
+                    Use any connected device, PC, Phone etc
+                  </li>
+                  <li class="card-text">Weekdays and weekend classes</li>
+                  <li class="card-text">Seasoned instructors</li>
+                  <li class="card-text">35 Contact hours.</li>
+                  <div class="text-center pt-3">
+                    <a href="#" class="btn btn-primary">Read More...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- card col 3 -->
+            <div class="col py-5 bg-warning">
+              <div class="card shadow" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="./imgs/card-img-2.webp"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title fs-3">Troubled Project Recovery</h5>
+                  <p class="card-text text-center">
+                    Troubled projects are not doomed to fail; they can surely be
+                    recovered. But the recovery efforts require expertise. Our
+                    project recovery experts begin by reviewing your project's
+                    current state to identify the areas in jeopardy.
+                  </p>
+                  <div class="text-center pt-3">
+                    <a href="#" class="btn btn-primary">Read More...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script
