--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alkic_Consulting</title>
+    <title>Alkic Consulting</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -14,7 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light shadow p-2">
+      <nav
+        class="navbar navbar-expand-lg navbar-light shadow p-2 mb-3 fixed-top"
+      >
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
           <button
@@ -85,17 +87,14 @@
                 <span class="btn-text-one fs-6 text-white">Contact</span
                 ><span class="btn-text-two fs-6 text-white">Welcome</span>
               </button>
-              <!-- <button class="btn">
-                  <span class="btn-text-one">Hover me</span>
-                  <span class="btn-text-two">Great!</span>
-                </button> -->
             </form>
           </div>
         </div>
       </nav>
     </header>
+    <br />
     <main>
-      <div class="container-fluid cont">
+      <div class="container-fluid cont mt-5">
         <div class="row text-white">
           <div class="col pt-5">
             <h2 class="pt-5 display-3">
@@ -151,8 +150,8 @@
         <div class="container-fluid">
           <div class="row">
             <!-- card col 1 -->
-            <div class="col bg-primary py-5">
-              <div class="card shadow" style="width: 18rem">
+            <div class="col py-5">
+              <div class="card shadow m-auto" style="width: 20rem">
                 <img
                   class="card-img-top"
                   src="./imgs/card-img-3.webp"
@@ -176,8 +175,8 @@
               </div>
             </div>
             <!-- div col 2 -->
-            <div class="col mt-3 py-4 bg-danger">
-              <div class="card shadow" style="width: 18rem">
+            <div class="col py-5">
+              <div class="card shadow m-auto" style="width: 20rem">
                 <img
                   class="card-img-top"
                   src="./imgs/card-img-1.webp"
@@ -201,8 +200,8 @@
               </div>
             </div>
             <!-- card col 3 -->
-            <div class="col py-5 bg-warning">
-              <div class="card shadow" style="width: 18rem">
+            <div class="col py-5">
+              <div class="card shadow m-auto" style="width: 20rem">
                 <img
                   class="card-img-top"
                   src="./imgs/card-img-2.webp"
@@ -226,6 +225,62 @@
         </div>
       </section>
     </main>
+    <div class="container shadow">
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <li class="nav-link">
+                <img src="./imgs/address.svg" alt="" /> House 5, 311 Road, Gowon
+                Estate, Lagos, NIGERIA
+              </li>
+              <li class="nav-link">
+                <img src="./imgs/telephone-fill.svg" alt="" /> +234 806 437 4105
+              </li>
+              <li class="nav-link">
+                <img src="./imgs/envelope-fill.svg" alt="" />
+                info@alkicconsulting.com
+              </li>
+            </div>
+            <div class="col">
+              <li class="nav-link">
+                <a
+                  class="p-auto"
+                  target="_blank"
+                  href="https://www.linkedin.com/company/alkic-consulting?trk=biz-companies-cym"
+                >
+                  <img src="./imgs/lindedn.webp" alt="" />
+                </a>
+              </li>
+              <li class="nav-link">
+                <a
+                  class="p-auto"
+                  target="_blank"
+                  href="http://www.twitter.com/AlkicConsulting"
+                >
+                  <img src="./imgs/tweet.webp" alt="" />
+                </a>
+              </li>
+              <li class="nav-link">
+                <a
+                  class="p-auto"
+                  target="_blank"
+                  href="http://www.facebook.com/AlkicConsulting"
+                >
+                  <img src="./imgs/fb.webp" alt="" />
+                </a>
+              </li>
+            </div>
+            <div class="col">
+              <h3>Alkic Consultings</h3>
+              <p class="fs">...improving organizational performance</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
