--- a/src/index.html
+++ b/src/index.html
@@ -277,6 +277,7 @@
               <h3>Alkic Consultings</h3>
               <p class="fs">...improving organizational performance</p>
             </div>
+            <p class="text-center pt-3">&copy; 2023 Alkic Consulting Inc</p>
           </div>
         </div>
       </footer>
