--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         class="navbar navbar-expand-lg navbar-light shadow p-2 mb-3 fixed-top"
       >
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="#">Alkic Consulting</a>
+          <a class="navbar-brand fs-2" href="./index.html">Alkic Consulting</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -36,7 +36,10 @@
           >
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active link-a" aria-current="page" href="#"
+                <a
+                  class="nav-link active link-a"
+                  aria-current="page"
+                  href="./pages/pmp-page.html"
                   >Live Online PMP Classes</a
                 >
               </li>
@@ -46,7 +49,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active link-a" href="#">About Us</a>
+                <a class="nav-link active link-a" href="./pages/about.html"
+                  >About Us</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
