--- a/src/index.html
+++ b/src/index.html
@@ -1,296 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alkic Consulting</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Dark/Light Mode Toggle</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-light shadow p-2 mb-3 fixed-top"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="./index.html">Alkic Consulting</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse text-center"
-            id="navbarSupportedContent"
-          >
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active link-a"
-                  aria-current="page"
-                  href="./pages/pmp-page.html"
-                  >Live Online PMP Classes</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active link-a" href="#"
-                  >Scrum Master Classes</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active link-a" href="./pages/about.html"
-                  >About Us</a
-                >
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle active link-a"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  More
-                </a>
-                <ul
-                  class="dropdown-menu text-center"
-                  aria-labelledby="navbarDropdown"
-                >
-                  <li>
-                    <a class="dropdown-item" href="#">Courses</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Groups</a>
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Video Tutorials</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-primary" type="submit">
-                <span class="btn-text-one fs-6 text-white">Contact</span
-                ><span class="btn-text-two fs-6 text-white">Welcome</span>
-              </button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <br />
-    <main>
-      <div class="container-fluid cont mt-5">
-        <div class="row text-white">
-          <div class="col pt-5">
-            <h2 class="pt-5 display-3">
-              Embark on a transformative learning journey with <br />
-              <span class="font-weight-bold text-uppercase"
-                >ALKIC Consulting</span
-              >
-              <br />
-              and become a sought-after expert in project management.
-            </h2>
-            <p class="lead">
-              Whether you're seeking professional growth, career advancement, or
-              organizational success, we are here to guide you every step of the
-              way.
-            </p>
-          </div>
-        </div>
-      </div>
-      <section class="container-fluid home-section-1">
-        <div class="row">
-          <div class="col-sm-6 my-5 text-center">
-            <h4 class="display-5">We help our clients to...</h4>
-            <ul class="list-group">
-              <li class="list-group">
-                <a class="nav-link text-dark fs-4" href=""
-                  >Improve Organizational Communication</a
-                >
-              </li>
-              <li class="list-group">
-                <a class="nav-link text-dark fs-4" href="">
-                  Boost Teamwork and Collaboration</a
-                >
-              </li>
-              <li class="list-group">
-                <a class="nav-link text-dark fs-4" href="">
-                  Enhance Project Team's Capabilities</a
-                >
-              </li>
-              <li class="list-group">
-                <a class="nav-link text-dark fs-4" href="">
-                  Recover Troubled Projects</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-sm-6 py-3">
-            <img class="img-fluid" src="./imgs/Zoom Training.webp" alt="" />
-          </div>
-        </div>
-      </section>
-      <!-- card section -->
-      <section>
-        <div class="container-fluid">
-          <div class="row">
-            <!-- card col 1 -->
-            <div class="col py-5">
-              <div class="card shadow m-auto" style="width: 20rem">
-                <img
-                  class="card-img-top"
-                  src="./imgs/card-img-3.webp"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h5 class="card-title fs-3">
-                    Recruitment of Project Managers
-                  </h5>
-                  <p class="card-text text-center">
-                    The profile of a project manager differs significantly from
-                    that of a line manager. And unless you engage the right
-                    resources, your project stands little chance of success. We
-                    know how to match people and their skills with your project
-                    requirements.
-                  </p>
-                  <div class="text-center pt-3">
-                    <a href="#" class="btn btn-primary">Read More...</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- div col 2 -->
-            <div class="col py-5">
-              <div class="card shadow m-auto" style="width: 20rem">
-                <img
-                  class="card-img-top"
-                  src="./imgs/card-img-1.webp"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h5 class="card-title fs-3">
-                    Online PMP Certification Training
-                  </h5>
-                  <li class="card-text">Attend from home</li>
-                  <li class="card-text">
-                    Use any connected device, PC, Phone etc
-                  </li>
-                  <li class="card-text">Weekdays and weekend classes</li>
-                  <li class="card-text">Seasoned instructors</li>
-                  <li class="card-text">35 Contact hours.</li>
-                  <div class="text-center pt-3">
-                    <a href="#" class="btn btn-primary">Read More...</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- card col 3 -->
-            <div class="col py-5">
-              <div class="card shadow m-auto" style="width: 20rem">
-                <img
-                  class="card-img-top"
-                  src="./imgs/card-img-2.webp"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h5 class="card-title fs-3">Troubled Project Recovery</h5>
-                  <p class="card-text text-center">
-                    Troubled projects are not doomed to fail; they can surely be
-                    recovered. But the recovery efforts require expertise. Our
-                    project recovery experts begin by reviewing your project's
-                    current state to identify the areas in jeopardy.
-                  </p>
-                  <div class="text-center pt-3">
-                    <a href="#" class="btn btn-primary">Read More...</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <div class="container shadow">
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6">
-              <li class="nav-link">
-                <img src="./imgs/address.svg" alt="" /> House 5, 311 Road, Gowon
-                Estate, Lagos, NIGERIA
-              </li>
-              <li class="nav-link">
-                <img src="./imgs/telephone-fill.svg" alt="" /> +234 806 437 4105
-              </li>
-              <li class="nav-link">
-                <img src="./imgs/envelope-fill.svg" alt="" />
-                info@alkicconsulting.com
-              </li>
-            </div>
-            <div class="col">
-              <li class="nav-link">
-                <a
-                  class="p-auto"
-                  target="_blank"
-                  href="https://www.linkedin.com/company/alkic-consulting?trk=biz-companies-cym"
-                >
-                  <img src="./imgs/lindedn.webp" alt="" />
-                </a>
-              </li>
-              <li class="nav-link">
-                <a
-                  class="p-auto"
-                  target="_blank"
-                  href="http://www.twitter.com/AlkicConsulting"
-                >
-                  <img src="./imgs/tweet.webp" alt="" />
-                </a>
-              </li>
-              <li class="nav-link">
-                <a
-                  class="p-auto"
-                  target="_blank"
-                  href="http://www.facebook.com/AlkicConsulting"
-                >
-                  <img src="./imgs/fb.webp" alt="" />
-                </a>
-              </li>
-            </div>
-            <div class="col">
-              <h3>Alkic Consultings</h3>
-              <p class="fs">...improving organizational performance</p>
-            </div>
-            <p class="text-center pt-3">&copy; 2023 Alkic Consulting Inc</p>
-          </div>
-        </div>
-      </footer>
+    <div class="container">
+      <h1>Welcome to My Website</h1>
+      <p>This is some example text.</p>
+      <button id="theme-toggle" class="btn btn-primary">Toggle Theme</button>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
