--- a/src/pages/pmp-page.html
+++ b/src/pages/pmp-page.html
@@ -96,8 +96,28 @@
       </nav>
     </header>
     <main>
-      <section></section>
+      <div class="container-fluid pmp-main">
+        <div class="row">
+          <div class="col-sm-6 main-img bg-danger">
+            <h2>Discover the Power of Online Project Management Training</h2>
+          </div>
+          <div class="col-sm-6">
+            <p class="lead">
+              At Alkic Consulting, we believe that every great project deserves
+              an exceptional project manager. As industries rapidly evolve and
+              organizations face dynamic challenges, the demand for skilled
+              project management professionals continues to soar. Our Online
+              Project Management Training is meticulously crafted to equip you
+              with the essential tools, knowledge, and expertise to lead with
+              confidence in this ever-changing landscape, all from the
+              convenience of your location, anywhere in the world.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
+    <button class="btn" id="theme-toggle">Toggle Theme</button>
+    <script src="../scripts/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
