--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dark/Light Mode Toggle</title>
+    <title>Alkic Consulting - Home</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg shadow mb-2">
+      <div class="container-fluid text-center">
+        <a class="navbar-brand" href="#">Alkic Consulting</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-lg-5 text-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Live Online PMP Classes</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Scrum Master Class</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle active"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                More
+              </a>
+              <ul
+                class="dropdown-menu text-center"
+                aria-labelledby="navbarDropdown"
+              >
+                <li><a class="dropdown-item" href="#">Courses</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Groups</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Video Tutorials</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button id="theme-toggle" class="btn btn-primary">
+            Toggle Theme
+          </button>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <h1>Welcome to My Website</h1>
       <p>This is some example text.</p>
-      <button id="theme-toggle" class="btn btn-primary">Toggle Theme</button>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
