--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,116 @@
             <img class="body-img animate__animated animate__slideInUp" src="./imgs/bg-img.svg" alt="">
           </div>
         </div>
+        <!-- Small Cards section -->
+        <section>
+          <div class="container small-cards">
+            <h1 class="text-center">We Help Our Clients to...</h1>
+            <div class="row mx-auto">
+              <div class="col-sm text-center shadow my-4">
+                <img class="image-fluid list-img" src="./imgs/list-img-1.svg" alt="">
+                <h3 class="pt-4">Improve Orgisational Performance</h3>
+                <p class="fs-5">Lorem ipsum a rem quibusdam ad atque dolores 
+                  blanditiis autem molestiae repellendus laudantium?
+                </p>
+              </div>
+              <div class="col-sm text-center shadow my-4">
+                <img src="./imgs/list-img-2.svg" alt="" class="img-fluid list-img">
+                <h3 class="pt-4">Team Work and Collaboration</h3>
+                <p class="fs-5">
+                  Lorem ipsum dolor sit amet temporibus voluptatibus velit accusantium minima, dignissimos enim!
+                </p>
+              </div>
+              <div class="col-sm text-center shadow my-4">
+                <img src="./imgs/list-img-3.2.svg" alt="" class="img-fluid list-img">
+                <h3 class="pt-4">Enhance Project Team Capabilities</h3>
+                <p class="fs-5">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt consectetur illo recusandae hicesse?
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Section 1 -->
+        <section class="section1">
+          <h1 class="text-center">Our Core Services</h1>
+          <p class="fs-5 text-center">Lorem ipsum, dolor sit amet laborum adipisci <br> quam laboriosam maiores alias voluptatum sunt sequi laboriosam!</p>
+          <section>
+              <div class="row">
+                <!-- card col 1 -->
+                <div class="col py-5">
+                  <div class="card shadow m-auto" style="width: 20rem">
+                    <img
+                      class="card-img-top"
+                      src="./imgs/card-img-3.webp"
+                      alt="Card image cap"
+                    />
+                    <div class="card-body text-dark">
+                      <h5 class="card-title fs-3">
+                        Recruitment of Project Managers
+                      </h5>
+                      <p class="card-text text-center">
+                        The profile of a project manager differs significantly from
+                        that of a line manager. And unless you engage the right
+                        resources, your project stands little chance of success. We
+                        know how to match people and their skills with your project
+                        requirements.
+                      </p>
+                      <div class="text-center pt-3">
+                        <a href="#" class="btn btn-primary">Read More...</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- div col 2 -->
+                <div class="col py-5">
+                  <div class="card shadow m-auto" style="width: 20rem">
+                    <img
+                      class="card-img-top"
+                      src="./imgs/card-img-1.webp"
+                      alt="Card image cap"
+                    />
+                    <div class="card-body text-dark">
+                      <h5 class="card-title fs-3">
+                        Online PMP Certification Training
+                      </h5>
+                      <li class="card-text">Attend from home</li>
+                      <li class="card-text">
+                        Use any connected device, PC, Phone etc
+                      </li>
+                      <li class="card-text">Weekdays and weekend classes</li>
+                      <li class="card-text">Seasoned instructors</li>
+                      <li class="card-text">35 Contact hours.</li>
+                      <div class="text-center pt-3">
+                        <a href="#" class="btn btn-primary">Read More...</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- card col 3 -->
+                <div class="col py-5">
+                  <div class="card shadow m-auto" style="width: 20rem">
+                    <img
+                      class="card-img-top"
+                      src="./imgs/card-img-2.webp"
+                      alt="Card image cap"
+                    />
+                    <div class="card-body text-dark">
+                      <h5 class="card-title fs-3">Troubled Project Recovery</h5>
+                      <p class="card-text text-center">
+                        Troubled projects are not doomed to fail; they can surely be
+                        recovered. But the recovery efforts require expertise. Our
+                        project recovery experts begin by reviewing your project's
+                        current state to identify the areas in jeopardy.
+                      </p>
+                      <div class="text-center pt-3">
+                        <a href="#" class="btn btn-primary">Read More...</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </section>
+        </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
