--- a/src/index.html
+++ b/src/index.html
@@ -103,21 +103,21 @@
           <div class="container small-cards">
             <h1 class="text-center">We Help Our Clients to...</h1>
             <div class="row mx-auto">
-              <div class="col-sm text-center shadow my-4">
+              <div class="col-sm text-center my-4">
                 <img class="image-fluid list-img" src="./imgs/list-img-1.svg" alt="">
                 <h3 class="pt-4">Improve Orgisational Performance</h3>
                 <p class="fs-5">Lorem ipsum a rem quibusdam ad atque dolores 
                   blanditiis autem molestiae repellendus laudantium?
                 </p>
               </div>
-              <div class="col-sm text-center shadow my-4">
+              <div class="col-sm text-center border-bottom shadow my-4">
                 <img src="./imgs/list-img-2.svg" alt="" class="img-fluid list-img">
-                <h3 class="pt-4">Team Work and Collaboration</h3>
+                <h3 class="pt-4">Boost Team Work and Collaboration</h3>
                 <p class="fs-5">
                   Lorem ipsum dolor sit amet temporibus voluptatibus velit accusantium minima, dignissimos enim!
                 </p>
               </div>
-              <div class="col-sm text-center shadow my-4">
+              <div class="col-sm text-center my-4">
                 <img src="./imgs/list-img-3.2.svg" alt="" class="img-fluid list-img">
                 <h3 class="pt-4">Enhance Project Team Capabilities</h3>
                 <p class="fs-5">
@@ -209,6 +209,26 @@
           </section>
         </section>
     </main>
+    <section>
+      <div class="container">
+        <h1 class="text-center">Some of Our Clients</h1>
+        <p class="fs-5 text-center">Lorem ipsum dolor, sit amet consectetur adipisicing</p>
+        <div class="row align-items-center">
+          <div class="col-sm">
+            <img src="./imgs/work-with2.png" alt="" class="img-fluid w-50">
+          </div>
+          <div class="col-sm">
+            <img src="./imgs/work-with.png" alt="" class="img-fluid work-with-img">
+          </div>
+          <div class="col-sm">
+            <img src="./imgs/wok-with-3.jpg" alt="" class="img-fluid work-with-img">
+          </div>
+          <div class="col-sm">
+            <img src="./imgs/work-with-4.jpg" alt="" class="img-fluid work-with-img">
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
